--- a/PineappleAnalyzer/PineappleAnalyzer.Test/PineappleAnalyzer.Test.csproj
+++ b/PineappleAnalyzer/PineappleAnalyzer.Test/PineappleAnalyzer.Test.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>PineappleAnalyzer</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>NET46</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
@@ -14,6 +18,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.0.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
+    <PackageReference Include="NuGet.Common" Version="4.9.4" />
+    <PackageReference Include="NuGet.Packaging" Version="4.9.4" />
+    <PackageReference Include="NuGet.Protocol" Version="4.9.4" />
+    <PackageReference Include="NuGet.Resolver" Version="4.9.4" />
   </ItemGroup>
 
   <ItemGroup>
