--- a/PineappleAnalyzer/PineappleAnalyzer/PineappleAnalyzer.csproj
+++ b/PineappleAnalyzer/PineappleAnalyzer/PineappleAnalyzer.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
