--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: .NET
 
 on: [push]
 
@@ -10,8 +10,23 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
+    - name: Setup Nuget.exe
+      uses: warrenbuckley/Setup-Nuget@v1
+
     - name: Setup MSBuild.exe
       uses: warrenbuckley/Setup-MSBuild@v1
 
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 2.2.108
+
+    - name: Nuget Restore
+      run: nuget restore
+
     - name: MSBuild
-      run: msbuild PineappleAnalyzer.sln
+      run: msbuild PineappleAnalyzer.sln /p:Configuration=Release
+
+    - name: Test with dotnet
+      run: dotnet test -v normal PineappleAnalyzer.Test
+      working-directory: PineappleAnalyzer
