--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,4 +1,4 @@
-name: .NET
+name: .NET CI
 
 on: [push]
 
@@ -8,19 +8,14 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v1
 
-    - name: Setup Nuget.exe
+    - name: Setup Nuget
       uses: warrenbuckley/Setup-Nuget@v1
 
-    - name: Setup MSBuild.exe
+    - name: Setup MSBuild
       uses: warrenbuckley/Setup-MSBuild@v1
-      
-    - name: Setup Nuget.exe
-      uses: warrenbuckley/Setup-Nuget@v1
-
-    - name: Nuget Restore
-      run: nuget restore
 
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -33,6 +28,6 @@ jobs:
     - name: MSBuild
       run: msbuild PineappleAnalyzer.sln /p:Configuration=Release
 
-    - name: Test with dotnet
+    - name: Test
       run: dotnet test -v normal PineappleAnalyzer.Test
       working-directory: PineappleAnalyzer
